# routerkeygenAndroid

./: .gitignore  README.md  RKDictionary.cfv
RouterKeygenDownloader/: .project  AndroidManifest.xml
RouterKeygenDownloader/res/layout/: activity_main.xml
RouterKeygenDownloader/res/values/: strings.xml  styles.xml
RouterKeygenDownloader/res/values-es/: strings.xml
RouterKeygenDownloader/res/values-fr/: strings.xml
RouterKeygenDownloader/res/values-it/: strings.xml
RouterKeygenDownloader/res/values-nl/: strings.xml
RouterKeygenDownloader/res/values-pt/: strings.xml
android/: .classpath  .cproject  .gitignore  .project  AndroidManifest.xml  build.gradle  lint.xml  project.properties  routerkeygen_version.json  settings.gradle
android/aFileChooser/: build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/jni/: Android.mk  thomson.c  thomsonDic.c
android/jni/include/: org_exobel_routerkeygen_NativeThomson.h  org_exobel_routerkeygen_ThomsonKeygen.h  org_exobel_routerkeygen_algorithms_NativeThomson.h  org_exobel_routerkeygen_algorithms_ThomsonKeygen.h
android/libs/: .gitignore
android/mm-ad-sdk/: android-ad-sdk.aar  build.gradle  mm-ad-sdk.aar
android/res/layout/: about_dialog.xml  actionbar_indeterminate_progress.xml  activity_cancel_operation.xml  activity_manual_input.xml  activity_network.xml  activity_networks_list.xml  activity_single_fragment.xml  activity_twopane.xml  adview.xml  changelogrow_layout.xml  fragment_manual_input.xml  fragment_network.xml  fragment_networks_list.xml  item_list_wifi.xml  main.xml  manual_input.xml  notification.xml  preferences.xml  results.xml  section_list_wifi.xml  seek_bar_preference.xml
android/res/layout-v11/: actionbar_indeterminate_progress.xml  activity_twopane.xml  fragment_manual_input.xml  item_list_wifi.xml
android/res/layout-v14/: changelogrow_layout.xml  fragment_manual_input.xml
android/res/menu/: networks_list.xml  preferences.xml  share_keys.xml  wifi.xml
android/res/raw/: changelog.xml
android/res/values/: analytics.xml  defaults.xml  dimens.xml  strings.xml  styles.xml
android/res/values-es/: strings.xml
android/res/values-fr/: strings.xml
android/res/values-it/: strings.xml
android/res/values-nl/: strings.xml
android/res/values-pt/: strings.xml
android/routerKeygen/: build.gradle  google-services.json
android/test/: .classpath  .gitignore  .project
android_donation/: .project  AndroidManifest.xml  project.properties
android_donation/app/: build.gradle
icon/: high.xcf  low.xcf  medium.xcf
qt/: .cproject  .gitignore  .project  AUTHORS  CMakeLists.txt  KeygenThread.cpp  KeygenThread.h  NEWS  WirelessMatcher.cpp  alicehandler.cpp  alicehandler.h  alicekeygen.cpp  alicekeygen.h  alicemagicinfo.h  build_linux.sh  build_mac.sh  build_win.bat  build_win.sh  build_win32.sh  build_win64.sh  comtrendkeygen.cpp  discuskeygen.cpp  discuskeygen.h  division.c  dlinkkeygen.cpp  dlinkkeygen.h  eircomkeygen.cpp  eircomkeygen.h  huaweikeygen.cpp  huaweikeygen.h  infostradakeygen.cpp  infostradakeygen.h  keygenthread.cpp  keygenthread.h  onokeygen.cpp  onokeygen.h  pirellikeygen.cpp  pirellikeygen.h  resources.qrc  rkqt.pro  (+24 more)
qt/cmake/: DpkgBuild.cmake  RpmBuild.cmake  config.h.cmake  icon.rc  toolchain-win32.cmake  toolchain-win64.cmake  version.h.cmake
qt/config/: alice.txt
qt/contribs/: contribs.sh
qt/doc/: routerkeygen.1
qt/forms/: aboutdialog.ui  routerkeygen.ui  welcome_dialog.ui
qt/lang/: CMakeLists.txt  create_ts.sh  routerkeygen_es.ts  routerkeygen_nl.ts  routerkeygen_pt.ts  routerkeygen_pt_PT.qm  routerkeygen_pt_PT.ts
qt/magic_info/: tele2.txt
qt/nsis/: CMakeLists.txt  installer.nsi
qt/resources/: ote_huawei.txt  resources.qrc
qt/share/: routerkeygen.desktop  routerkeygen.icns
qt/src/: CMakeLists.txt  KeygenThread.cpp  KeygenThread.h  RouterKeygen.cpp  RouterKeygen.h  WirelessMatcher.cpp  WirelessMatcher.h  alicehandler.cpp  alicemagicinfo.cpp  division.c  main.cpp  routerkeygen.cpp  sha256.cpp
qt/src/algorithms/: AliceGermanyKeygen.cpp  AliceGermanyKeygen.h  AliceHandler.cpp  AliceItalyKeygen.cpp  AliceItalyKeygen.h  AliceKeygen.cpp  AliceMagicInfo.cpp  AndaredKeygen.cpp  AndaredKeygen.h  AxtelKeygen.cpp  AxtelKeygen.h  CabovisaoSagemKeygen.cpp  CabovisaoSagemKeygen.h  ComtrendKeygen.cpp  ComtrendKeygen.h  ConnKeygen.cpp  ConnKeygen.h  DiscusKeygen.cpp  DiscusKeygen.h  DlinkKeygen.cpp  DlinkKeygen.h  EasyBoxKeygen.cpp  EasyBoxKeygen.h  EircomKeygen.cpp  EircomKeygen.h  HuaweiKeygen.cpp  HuaweiKeygen.h  InfostradaKeygen.cpp  InfostradaKeygen.h  InterCableKeygen.cpp  InterCableKeygen.h  Keygen.cpp  Keygen.h  MaxcomKeygen.cpp  MaxcomKeygen.h  MegaredKeygen.cpp  MegaredKeygen.h  OnoKeygen.cpp  OnoKeygen.h  OteBAUDKeygen.cpp  (+51 more)
qt/src/config/: AliceConfigParser.cpp  AliceConfigParser.h  AliceMagicInfo.cpp  OTEHuaweiConfigParser.cpp  OTEHuaweiConfigParser.h  TeleTuConfigParser.cpp  TeleTuConfigParser.h  TeleTuMagicInfo.cpp
qt/src/dialog/: AboutDialog.cpp  UpdateDialog.cpp  WelcomeDialog.cpp  WelcomeDialog.h  welcomedialog.cpp
qt/src/forms/: UpdateDialog.ui  aboutdialog.ui  routerkeygen.ui
qt/src/include/: AliceHandler.h  AliceKeygen.h  AxtelKeygen.h  ConnKeygen.h  DlinkKeygen.h  Keygen.h  KeygenThread.h  OteBAUDKeygen.h  PBSKeygen.h  PirelliKeygen.h  QScanResult.h  QWifiManager.h  RouterKeygen.h  TeleTuKeygen.h  TeleTuMagicInfo.h  UpdateDialog.h  WifimediaRKeygen.h  WirelessMatcher.h  comtrendkeygen.h  routerkeygen.h
qt/src/mac/: macloginitemsmanager.h  macloginitemsmanager.mm
qt/src/qcmdlineparser/: qcmdlineargument.cpp  qcmdlineargument.h  qcmdlineparser.cpp  qcmdlineparser.h
qt/src/sha/: sha1-586.win32.S  sha256.cpp
qt/src/wifi/: QScanResult.cpp  QScanResult.h  QWifiManager.cpp  QWifiManager.h  QWifiManagerPrivate.cpp  QWifiManagerPrivate.h  QWifiManagerPrivateMac.cpp  QWifiManagerPrivateMac.h  QWifiManagerPrivateUnix.cpp  QWifiManagerPrivateUnix.h  QWifiManagerPrivateWin.cpp  QWifiManagerPrivateWin.h
qt/test/: .gitignore  AlgorithmsTest.cpp  test.pro
screenshots/: featurekeygen.xcf
thomsonDicGenerator/: .gitignore  .project
(+311 files in other folders)
